<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright [2021] [Reham Albakouni, Matt Asgari Motlagh, Aidan Horemans, Courtenay Laing-Kobe, Vivek Malhotra, Kelly Shih]

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
-->
<androidx.cardview.widget.CardView android:layout_width="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="80dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="5dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="3dp">

        <LinearLayout
            android:layout_width="282dp"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/due_habit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/sample_user"
                android:textSize="9pt"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/due_habit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="6pt"
                android:text="@string/sample_habit_description" />


        </LinearLayout>

        <ImageView
            android:id="@+id/my_progress"
            android:layout_width="62dp"
            android:layout_height="match_parent"

            android:clickable="true"
            android:contentDescription="@string/indicator"
            android:focusable="true"
            android:padding="20dp"
            >

        </ImageView>

    </LinearLayout>

</androidx.cardview.widget.CardView>